# python-websockets-demo

./: .gitignore  README.md  pyproject.toml  server.py
client/: index.html  skeleton.css
